src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  html,
  body {
    direction: rtl;
    overflow-x: hidden !important;
  }
  html {
    scroll-behavior: smooth;
  }
  body {
    @apply bg-[#FAFBFC];
  }
}

@layer components {
  .loginButton {
    @apply bg-primary text-white rounded-full w-[133px] h-[48px] flex justify-center items-center;
  }
  .basket {
    @apply bg-white dark:bg-gray-800 flex justify-center items-center w-[48px] h-[48px] rounded-full relative;
  }
  .basketTotalCoursesAdded {
    @apply absolute -top-[6px] right-0 bg-primary text-white text-[8px] rounded-full p-1 px-[7px];
  }
  .serviceBox {
    @apply flex flex-col justify-center items-center rounded-[24px] border-[1px] border-solid border-[#ECEFF1] h-[280px] px-6 transition-shadow hover:bg-white dark:hover:bg-gray-900 lg:w-[390px] hover:shadow-primaryShadow;
  }
  .courseItem {
    @apply mt-10 w-[90%] lg:w-[296px] pb-3 lg:pb-0 lg:h-[389px] rounded-[24px] shadow-primaryShadow px-4;
  }
  .courseItemImage {
    @apply w-full h-[210px] lg:h-[180px] rounded-[20px] mt-[16px] cursor-pointer;
  }
  .courseItemDetailsBox {
    @apply flex gap-[3px];
  }
  .courseItemDetailsBoxText {
    @apply font-[500] text-[12px];
  }
  .categoryItem {
    @apply w-[94%] lg:w-[328px] h-[328px] shadow-landingCategoryItemShadow rounded-[32px] bg-white flex flex-col justify-center items-center mt-4;
  }
  .landingBlogItemStyleTwoBackground {
    @apply flex gap-1 justify-center items-center bg-secondary dark:bg-gray-900 w-[102px] h-[40px] rounded-[80px];
  }
  .landingBlogItemsStyleTwoColor {
    @apply font-[500] text-primaryColor dark:text-darkText mt-[1px];
  }
  .landingTeacherItemCoursesCount {
    @apply absolute top-14 right-14 flex justify-center items-center w-[88px] h-[36px] bg-white rounded-[50px] shadow-landingTeacherCoursesCount;
  }
  .footer {
    @apply bg-footerBackground mt-16 flex flex-col justify-center items-center pt-12 pb-14;
  }
  .footerLogoDescriptionBox {
    @apply flex flex-col items-center bg-inherit w-[420px] text-center;
  }
  .footerLogoDescriptionBoxButton {
    @apply absolute top-2 right-14 lg:right-3 shadow-footerJoinButtonShadow bg-primary text-white w-[77px] h-[40px] rounded-[80px];
  }
  .footerLogoDescriptionBoxInput {
    @apply placeholder:text-text3 shadow-footerJoinInputShadow w-[80%] lg:w-[480px] py-4 rounded-[50px] px-5 pr-20 outline-0;
  }
  .footerMenuItems {
    @apply font-[400] text-white border-l-[1px] pl-5 group-last:border-0 group-last:pl-0;
  }
  .footerCopyright {
    @apply bg-footerCopyRightBackground flex flex-col lg:flex-row justify-between px-10 py-4 rounded-[16px] lg:w-[1280px] lg:h-[64px] mt-9;
  }
  .footerSocialMediaBox {
    @apply flex justify-between items-center gap-2 mt-7 lg:mt-0;
  }
  .footerSocialMediaItem {
    @apply flex justify-center items-center w-[32px] h-[32px] rounded-[50px] bg-socialMediaIcon;
  }
  .filterRangeText {
    @apply font-[500] text-[12px] text-text3 dark:text-darkText;
  }
  .coursesGridView {
    @apply bg-filterGridView dark:bg-gray-900 rounded-[16px] p-[8px] w-[100px] h-[50px] flex gap-2 justify-center items-center;
  }
  .coursesGridViewItems {
    @apply w-[40px] h-[40px] flex justify-center items-center rounded-[16px];
  }
  .coursesGridViewItemsActive {
    @apply bg-white dark:bg-gray-800 w-[40px] h-[40px] flex justify-center items-center rounded-[16px];
  }
  .coursesSelectBoxWrapper {
    @apply relative after:content-[''] after:absolute after:top-1 after:left-3 after:bg-coursesSelectOptionBackground after:dark:bg-coursesSelectOptionBackgroundDark after:w-[40px] after:h-[40px] after:bg-no-repeat after:bg-left before:absolute before:top-3 before:right-3 before:bg-coursesSelectOptionSort before:dark:bg-coursesSelectOptionSortDark before:w-[24px] before:h-[24px];
  }
  .coursesSelectBox {
    @apply w-full h-[50px] pr-10 rounded-[16px] outline-none appearance-none dark:bg-gray-900;
  }
  .courseLikeBox {
    @apply flex justify-center items-center bg-[#FFEBEE] dark:bg-gray-800 dark:text-darkText cursor-pointer rounded-[24px] w-[51px] h-[32px] font-[500] text-red gap-1 -mt-1;
  }
  .courseItemStyleTwo {
    @apply w-full bg-white dark:bg-gray-900 shadow-primaryShadow rounded-[24px] lg:h-[212px] px-3 py-2 flex flex-col lg:flex-row justify-center items-center gap-3;
  }
  .courseItemStyleTwoDetailsWrapperFlexBox {
    @apply flex flex-col lg:flex-row gap-3 items-center mt-5;
  }
  .courseItemStyleTwoDetailsWrapper {
    @apply bg-courseStyleTwoDetails dark:bg-darkBackground w-full lg:w-[493px] lg:h-[44px] rounded-[24px] flex flex-col lg:flex-row gap-3 justify-center items-center py-3;
  }
  .courseItemStyleTwoDescription {
    @apply text-justify font-[500] text-[14px] text-text2 dark:text-darkText mt-1 w-full lg:w-[97%];
  }
  .courseDetailImageBox {
    @apply flex gap-1 justify-center items-center bg-white w-[119px] h-[48px] rounded-[50px];
  }
  .courseDetailImageBoxTitle {
    @apply font-[500] text-text1;
  }
  .likeDislikeButton {
    @apply flex gap-2 justify-center items-center w-[83px] h-[48px] rounded-[50px] bg-likeDislikeIcon;
  }
  .likeDislikeButtonText {
    @apply font-[500] text-[20px] text-text1 mt-[6px];
  }
  .courseDetailsTitle {
    @apply font-[700] text-[20px] text-text1 mb-3 my-3;
  }
  .courseDetailsParagraph {
    @apply font-[500] text-text2 text-justify;
  }
  .courseDetailsAddCommentTextarea {
    @apply border-[1px] border-solid border-courseDetailsCommentsTextareaBorder outline-none w-full min-h-[100px] rounded-[10px] px-4 py-4 font-[400] text-[14px] text-text3;
  }
  .mainButton {
    @apply bg-primary text-white w-[131px] h-[48px] rounded-full flex justify-center items-center;
  }
  .courseDetailAddComment {
    @apply bg-primary text-white w-[81px] h-[32px] rounded-[50px] outline-none shadow-courseAddCommentButton font-[700] text-[12px] mt-2;
  }
  .coursesHeroSectionSpanText {
    @apply font-[700] text-[24px] text-primaryColor dark:text-darkText lg:bg-no-repeat lg:bg-[right_top_2.4rem] h-[50px] pr-10 pt-20 pb-9;
  }
  .blogItemText {
    @apply font-[500] text-[14px] text-primaryColor;
  }
}

/* Swiper */
.swiper-button-prev,
.swiper-button-next {
  @apply w-[100px] h-[100px] bg-[url("/src/assets/images/Landing/LandingTeachers/Icons/prev-arrow.svg")];
}
.swiper-button-next {
  @apply bg-[url("/src/assets/images/Landing/LandingTeachers/Icons/next-arrow.svg")];
}
.swiper-button-prev::after,
.swiper-button-next::after {
  @apply hidden;
}
.swiper-pagination-bullet {
  @apply w-[20px] h-[20px] bg-center bg-[url('/src/assets/images/Landing/LandingTeachers/Icons/default-pagination.svg')];
}
.swiper-pagination-bullet.swiper-pagination-bullet-active {
  @apply bg-transparent bg-[url('/src/assets/images/Landing/LandingTeachers/Icons/active-pagination.svg')];
}
.swiper-pagination {
  @apply gap-3 flex justify-center;
}
.swiper-wrapper {
  @apply mb-12;
}

/* Material UI */
.MuiPaper-root {
  @apply !shadow-none;
}

.MuiButtonBase-root {
  @apply !pr-[22px] !pl-[13px];
}

.MuiFormControlLabel-root {
  @apply !m-0;
}

.MuiAccordionDetails-root {
  @apply !p-0 !pb-3;
}

.MuiPaper-root.Mui-expanded {
  @apply !mt-0;
}

span.MuiTypography-root {
  @apply font-[500] text-[14px] text-text2;
}

.priceFilterCheckbox .MuiButtonBase-root {
  @apply !p-0 !pl-2;
}

.MuiAccordionSummary-expandIconWrapper.Mui-expanded.css-yw020d-MuiAccordionSummary-expandIconWrapper
  img:last-child {
  @apply !block;
}
.MuiAccordionSummary-expandIconWrapper.Mui-expanded.css-yw020d-MuiAccordionSummary-expandIconWrapper
  img:first-child {
  @apply !hidden;
}
.css-eqpfi5-MuiAccordionSummary-content.Mui-expanded {
  @apply !my-[12px];
}

.dark .css-i4bv87-MuiSvgIcon-root {
  @apply fill-white;
}

span.MuiTypography-root {
  @apply dark:text-darkText;
}

/* Range Slider Input */
.range-slider {
  @apply bg-rangeSlider h-[5px];
}

.range-slider__range,
.range-slider__thumb {
  @apply !bg-rangeSliderCompleted;
}

.range-slider__thumb {
  @apply !w-[15px] !h-[15px];
}

